# wild-gaussians

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
submodules/diff-gaussian-rasterization/cuda_rasterizer/: backward.cu
submodules/diff-gaussian-rasterization/diff_gaussian_rasterization/: __init__.py
wildgaussians/: _metrics_lpips.py  config.py  dinov2.py  evaluation.py  logging.py  method.py  train.py  types.py  utils.py  wildgaussians_spec.py
wildgaussians/configs/: default.yml  nerfonthego.yml  phototourism.yml
wildgaussians/datasets/: __init__.py  _colmap_utils.py  _common.py  colmap.py  phototourism.py
